<resources>
    <string name="app_name">knudge assignment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cat_business">Business</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_general">General</string>
    <string name="cat_health">Health</string>
    <string name="cat_science">Science</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_technology">Technology</string>

</resources>